# faucet-api

./: .gitignore  README.md  manage.py  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
faucet/: admin.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
faucet/migrations/: 0001_initial.py
faucet/tests/: test_views.py
faucet_task/: asgi.py  settings.py  urls.py  wsgi.py
